--- a/.github/workflows/ios-check.yaml
+++ b/.github/workflows/ios-check.yaml
@@ -79,3 +79,12 @@ jobs:
             'generic/platform=iOS' \
             CODE_SIGNING_REQUIRED=NO \
             CODE_SIGNING_ALLOWED=NO
+
+      - name: Run Tests
+        run: |
+          xcodebuild \ 
+            -workspace xcode/omim.xcworkspace \
+            -scheme OMaps \
+            -destination 'platform=iOS Simulator,name=iPhone 15,OS=latest' \
+            test
+        working-directory: xcode
