[ios] add Test Run to the ios-check workflow
Signed-off-by: Kiryl Kaveryn <kirylkaveryn@gmail.com>

--- a/.github/workflows/ios-check.yaml
+++ b/.github/workflows/ios-check.yaml
@@ -79,3 +79,7 @@ jobs:
             'generic/platform=iOS' \
             CODE_SIGNING_REQUIRED=NO \
             CODE_SIGNING_ALLOWED=NO
+
+      - name: Run Tests
+        run: xcodebuild test -scheme OMapsTests -destination 'platform=iOS Simulator,name=iPhone 13,OS=latest'
+        working-directory: xcode
